--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -9,10 +9,11 @@ button,
   text-decoration: none;
   border: none;
   box-shadow: 12.5px 12.5px 10px rgba(0, 0, 0, 0.035), 100px 100px 80px rgba(0, 0, 0, 0.07);
-  background: var(--primary-color);
+  background: var(--button-color);
   color: snow;
   font-weight: 700;
   transition: background 0.25s ease;
+  border: 4px solid var(--primary-color);
   &:hover {
     background: var(--primary-color-light);
   }
